chore: 빌드 의존성 버전을 올린다
Robolectric 4.17이 SDK 37을 지원하기 시작하면서 androidHostTest가 ApplicationSharedMemory를 거쳐 FileDescriptor의 내부 필드를 건드린다. Robolectric은 이를 jdk.internal.access의 SharedSecrets로 흉내 내는데 JDK 17 이상에서는 이 패키지가 닫혀 있어 모든 호스트 테스트가 실패한다. 해당 패키지만 열어 준다.

firebaseCrashlyticsGradlePlugin은 아직 배포된 최신인 3.0.8을 쓴다.